RE #35: Changed .form-check-label to display inline-flex so that the text associated with radio and checkboxes will wrap correctly

--- a/src/components/button/_btn-check-radio.scss
+++ b/src/components/button/_btn-check-radio.scss
@@ -15,6 +15,7 @@ input.btn-check {
 }
 
 input.btn-check + label {
+  flex: 0 0 auto;
   width: 1.5rem;
   height: 1.5rem;
   border-radius: $border-radius-lg;
@@ -136,6 +137,7 @@ input.btn-radio {
 }
 
 input.btn-radio + label {
+  flex: 0 0 auto;
   width: 1.5rem;
   height: 1.5rem;
   border-radius: $round;
